Added Directories Creation

--- a/notebook/preprocessing.ipynb
+++ b/notebook/preprocessing.ipynb
@@ -54,6 +54,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Path to directories\n",
+    "mkdir('/LidarPreProcessing/data/')\n",
+    "mkdir('/LidarPreProcessing/data/las')\n",
+    "mkdir('/LidarPreProcessing/data/las/testdata')\n",
+    "mkdir('/LidarPreProcessing/data/txt')\n",
+    "mkdir('/LidarPreProcessing/data/txt/testdata')\n",
+    "mkdir('/LidarPreProcessing/data/txt/testdataout')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "#Add Path to the Archeology Shape file Eg: ~/LidarPreProcessing/resources/archaeology.shp\n",
     "shape = fiona.open(\"Path/to/archeology.shp\")\n",
