Dealing with non relevant outputs from fiona's bounding box filtering

--- a/notebook/preprocessing.ipynb
+++ b/notebook/preprocessing.ipynb
@@ -111,12 +111,15 @@
     "    fullarray=[]\n",
     "    #iterate over these polygons to find which points in the point cloud\n",
     "    # lie inside\n",
-    "    for polynum in range(len(hits)-1):\n",
+    "    for polynum in range(len(hits)):\n",
     "        for j in range(len(hits[polynum][1]['geometry']['coordinates'])):\n",
     "            #print('polygon number',j+1,'with this id')\n",
     "            unpacklist=hits[polynum][1]['geometry']['coordinates'][j]\n",
     "            if len(unpacklist)==1:\n",
     "                unpacklist=unpacklist[0]\n",
+    "            #dealing with non relevant nested lists which fiona's bounding box filtering functions outputs  \n",
+    "            if any(isinstance(sub, list) for sub in unpacklist)==True: \n",
+    "                continue\n",
     "            polygon=Polygon(unpacklist)\n",
     "            array = []\n",
     "            zeroarray=[]\n",
