--- a/notebook/preprocessing_example.ipynb
+++ b/notebook/preprocessing_example.ipynb
@@ -108,7 +108,6 @@
     "    hits=list(shape.items(bbox=(xmin, ymin, xmax, ymax)))\n",
     "    zval=zval.tolist()\n",
     "    fullarray=[]\n",
-    "    fullzeroarray=[]\n",
     "    #iterate over the polygons in the pointcloud\n",
     "    for polynum in range(len(hits)-1):\n",
     "        #iterate over the coordinates of the polygon\n",
@@ -117,6 +116,8 @@
     "            unpacklist=hits[polynum][1]['geometry']['coordinates'][j]\n",
     "            if len(unpacklist)==1:\n",
     "                unpacklist=unpacklist[0]\n",
+    "            if any(isinstance(sub, list) for sub in unpacklist)==True: \n",
+    "                continue\n",
     "            polygon=Polygon(unpacklist)       \n",
     "            array = []\n",
     "            zeroarray=[]\n",
