--- a/notebook/preprocessing_example.ipynb
+++ b/notebook/preprocessing_example.ipynb
@@ -109,7 +109,7 @@
     "    zval=zval.tolist()\n",
     "    fullarray=[]\n",
     "    #iterate over the polygons in the pointcloud\n",
-    "    for polynum in range(len(hits)-1):\n",
+    "    for polynum in range(len(hits)):\n",
     "        #iterate over the coordinates of the polygon\n",
     "        for j in range(len(hits[polynum][1]['geometry']['coordinates'])):\n",
     "            #print('polygon with this is id is th',j)\n",
